# Conduct

./: .gitignore  AGENTS.md  CLAUDE.md  Conduct.app.tar.gz.sig  Conduct_0.8.0_aarch64.dmg  LICENSE  README.md  impl.md  latest.json  package-lock.json  package.json  pnpm-lock.yaml  prd.md  prd_log.md  prd_marketplace.md  release_notes.md  scenario.md  server_config.md  settings.md  sign_release.md  skills_repo.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-build.yml
design/: README.md
design/local/: code.html
design/local_warm/: code.html
design/marketplace/: code.html
scripts/: uninstall_conduct.sh  write-version.mjs
server/: localserver.md
server/localserver_PostgreSQL/: localserver.md  schema.sql  send_test_request.py
server/localserver_PostgreSQL/app/: main.py
server/localserver_PostgreSQL/config/: .env.example
server/localserver_mysql/: localserver.md  requirements.txt  schema.sql
server/localserver_mysql/app/: config.py  db.py  geoip.py  main.py
server/localserver_mysql/config/: .env.example
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/keys/: tauri_private.key.pub
src-tauri/src/: main.rs  scan.rs
src/cli/: index.ts
src/core/: ConflictAnalyzer.ts  LocationResolver.ts  Parser.ts  Reporter.ts  Scanner.ts  Validator.ts  index.ts
src/types/: index.ts
telemetry_server/: README.md  requirements.txt
telemetry_server/app/: db.py  main.py
telemetry_server/config/: .env.example
telemetry_server/nginx/: conduct-telemetry.conf
telemetry_server/systemd/: conduct-telemetry.service
(+21 files in other folders)
